Refactor toSequence() collector